include/maplibre_native_c/map.h


typedef enum mln_camera_option_field : uint32_t {
  MLN_CAMERA_OPTION_CENTER = 1U << 0U,
  MLN_CAMERA_OPTION_ZOOM = 1U << 1U,
  MLN_CAMERA_OPTION_BEARING = 1U << 2U,
  MLN_CAMERA_OPTION_PITCH = 1U << 3U,
  MLN_CAMERA_OPTION_CENTER_ALTITUDE = 1U << 4U,
  MLN_CAMERA_OPTION_PADDING = 1U << 5U,
  MLN_CAMERA_OPTION_ANCHOR = 1U << 6U,
  MLN_CAMERA_OPTION_ROLL = 1U << 7U,
  MLN_CAMERA_OPTION_FOV = 1U << 8U,
} mln_camera_option_field;
typedef enum mln_animation_option_field : uint32_t {
  MLN_ANIMATION_OPTION_DURATION = 1U << 0U,
  MLN_ANIMATION_OPTION_VELOCITY = 1U << 1U,
  MLN_ANIMATION_OPTION_MIN_ZOOM = 1U << 2U,
  MLN_ANIMATION_OPTION_EASING = 1U << 3U,
  MLN_ANIMATION_OPTION_TRANSITION_ID = 1U << 4U,
} mln_animation_option_field;
typedef enum mln_camera_fit_option_field : uint32_t {
  MLN_CAMERA_FIT_OPTION_PADDING = 1U << 0U,
  MLN_CAMERA_FIT_OPTION_BEARING = 1U << 1U,
  MLN_CAMERA_FIT_OPTION_PITCH = 1U << 2U,
} mln_camera_fit_option_field;
typedef enum mln_bound_option_field : uint32_t {
  MLN_BOUND_OPTION_BOUNDS = 1U << 0U,
  MLN_BOUND_OPTION_MIN_ZOOM = 1U << 1U,
  MLN_BOUND_OPTION_MAX_ZOOM = 1U << 2U,
  MLN_BOUND_OPTION_MIN_PITCH = 1U << 3U,
  MLN_BOUND_OPTION_MAX_PITCH = 1U << 4U,
  MLN_BOUND_OPTION_UNBOUNDED = 1U << 5U,
} mln_bound_option_field;
typedef enum mln_free_camera_option_field : uint32_t {
  MLN_FREE_CAMERA_OPTION_POSITION = 1U << 0U,
  MLN_FREE_CAMERA_OPTION_ORIENTATION = 1U << 1U,
} mln_free_camera_option_field;
typedef enum mln_projection_mode_field : uint32_t {
  MLN_PROJECTION_MODE_AXONOMETRIC = 1U << 0U,
  MLN_PROJECTION_MODE_X_SKEW = 1U << 1U,
  MLN_PROJECTION_MODE_Y_SKEW = 1U << 2U,
} mln_projection_mode_field;
typedef enum mln_map_debug_option : uint32_t {
  MLN_MAP_DEBUG_TILE_BORDERS = 1U << 1U,
  MLN_MAP_DEBUG_PARSE_STATUS = 1U << 2U,
  MLN_MAP_DEBUG_TIMESTAMPS = 1U << 3U,
  MLN_MAP_DEBUG_COLLISION = 1U << 4U,
  MLN_MAP_DEBUG_OVERDRAW = 1U << 5U,
  MLN_MAP_DEBUG_STENCIL_CLIP = 1U << 6U,
  MLN_MAP_DEBUG_DEPTH_BUFFER = 1U << 7U,
} mln_map_debug_option;
typedef enum mln_north_orientation : uint32_t {
  MLN_NORTH_ORIENTATION_UP = 0,
  MLN_NORTH_ORIENTATION_RIGHT = 1,
  MLN_NORTH_ORIENTATION_DOWN = 2,
  MLN_NORTH_ORIENTATION_LEFT = 3,
} mln_north_orientation;
typedef enum mln_constrain_mode : uint32_t {
  MLN_CONSTRAIN_MODE_NONE = 0,
  MLN_CONSTRAIN_MODE_HEIGHT_ONLY = 1,
  MLN_CONSTRAIN_MODE_WIDTH_AND_HEIGHT = 2,
  MLN_CONSTRAIN_MODE_SCREEN = 3,
} mln_constrain_mode;
typedef enum mln_viewport_mode : uint32_t {
  MLN_VIEWPORT_MODE_DEFAULT = 0,
  MLN_VIEWPORT_MODE_FLIPPED_Y = 1,
} mln_viewport_mode;
typedef enum mln_map_viewport_option_field : uint32_t {
  MLN_MAP_VIEWPORT_OPTION_NORTH_ORIENTATION = 1U << 0U,
  MLN_MAP_VIEWPORT_OPTION_CONSTRAIN_MODE = 1U << 1U,
  MLN_MAP_VIEWPORT_OPTION_VIEWPORT_MODE = 1U << 2U,
  MLN_MAP_VIEWPORT_OPTION_FRUSTUM_OFFSET = 1U << 3U,
} mln_map_viewport_option_field;
typedef enum mln_tile_lod_mode : uint32_t {
  MLN_TILE_LOD_MODE_DEFAULT = 0,
  MLN_TILE_LOD_MODE_DISTANCE = 1,
} mln_tile_lod_mode;
typedef enum mln_map_tile_option_field : uint32_t {
  MLN_MAP_TILE_OPTION_PREFETCH_ZOOM_DELTA = 1U << 0U,
  MLN_MAP_TILE_OPTION_LOD_MIN_RADIUS = 1U << 1U,
  MLN_MAP_TILE_OPTION_LOD_SCALE = 1U << 2U,
  MLN_MAP_TILE_OPTION_LOD_PITCH_THRESHOLD = 1U << 3U,
  MLN_MAP_TILE_OPTION_LOD_ZOOM_SHIFT = 1U << 4U,
  MLN_MAP_TILE_OPTION_LOD_MODE = 1U << 5U,
} mln_map_tile_option_field;
typedef enum mln_map_mode : uint32_t {
  MLN_MAP_MODE_CONTINUOUS = 0,
  MLN_MAP_MODE_STATIC = 1,
  MLN_MAP_MODE_TILE = 2,
} mln_map_mode;
typedef struct mln_map_options {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint32_t map_mode;
  bool fast_pfor_enabled;
} mln_map_options;
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
typedef struct mln_unit_bezier {
  double x1;
  double y1;
  double x2;
  double y2;
} mln_unit_bezier;
typedef struct mln_animation_options {
  uint32_t size;
  uint32_t fields;
  double duration_ms;
  double velocity;
  double min_zoom;
  mln_unit_bezier easing;
  uint64_t transition_id;
} mln_animation_options;
typedef struct mln_camera_fit_options {
  uint32_t size;
  uint32_t fields;
  mln_edge_insets padding;
  double bearing;
  double pitch;
} mln_camera_fit_options;
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
typedef struct mln_lat_lng {
  double latitude;
  double longitude;
} mln_lat_lng;
typedef struct mln_string_view {
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
typedef struct mln_geometry mln_geometry;
typedef enum mln_geometry_type : uint32_t {
  MLN_GEOMETRY_TYPE_EMPTY = 0,
  MLN_GEOMETRY_TYPE_POINT = 1,
  MLN_GEOMETRY_TYPE_LINE_STRING = 2,
  MLN_GEOMETRY_TYPE_POLYGON = 3,
  MLN_GEOMETRY_TYPE_MULTI_POINT = 4,
  MLN_GEOMETRY_TYPE_MULTI_LINE_STRING = 5,
  MLN_GEOMETRY_TYPE_MULTI_POLYGON = 6,
  MLN_GEOMETRY_TYPE_GEOMETRY_COLLECTION = 7,
} mln_geometry_type;
typedef struct mln_coordinate_span {
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
typedef struct mln_polygon_geometry {
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
typedef struct mln_multi_line_geometry {
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
typedef struct mln_multi_polygon_geometry {
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
typedef struct mln_geometry_collection {
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
typedef struct mln_geometry {
  uint32_t size;
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
typedef enum mln_json_value_type : uint32_t {
  MLN_JSON_VALUE_TYPE_NULL = 0,
  MLN_JSON_VALUE_TYPE_BOOL = 1,
  MLN_JSON_VALUE_TYPE_UINT = 2,
  MLN_JSON_VALUE_TYPE_INT = 3,
  MLN_JSON_VALUE_TYPE_DOUBLE = 4,
  MLN_JSON_VALUE_TYPE_STRING = 5,
  MLN_JSON_VALUE_TYPE_ARRAY = 6,
  MLN_JSON_VALUE_TYPE_OBJECT = 7,
} mln_json_value_type;
typedef struct mln_json_array {
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
typedef struct mln_json_member {
  mln_string_view key;
  const mln_json_value* value;
} mln_json_member;
typedef struct mln_json_object {
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
typedef struct mln_json_value {
  uint32_t size;
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;
typedef enum mln_feature_state_selector_field : uint32_t {
  MLN_FEATURE_STATE_SELECTOR_SOURCE_LAYER_ID = 1U << 0U,
  MLN_FEATURE_STATE_SELECTOR_FEATURE_ID = 1U << 1U,
  MLN_FEATURE_STATE_SELECTOR_STATE_KEY = 1U << 2U,
} mln_feature_state_selector_field;
typedef struct mln_feature_state_selector {
  uint32_t size;
  uint32_t fields;
  mln_string_view source_id;
  mln_string_view source_layer_id;
  mln_string_view feature_id;
  mln_string_view state_key;
} mln_feature_state_selector;
typedef enum mln_feature_identifier_type : uint32_t {
  MLN_FEATURE_IDENTIFIER_TYPE_NULL = 0,
  MLN_FEATURE_IDENTIFIER_TYPE_UINT = 1,
  MLN_FEATURE_IDENTIFIER_TYPE_INT = 2,
  MLN_FEATURE_IDENTIFIER_TYPE_DOUBLE = 3,
  MLN_FEATURE_IDENTIFIER_TYPE_STRING = 4,
} mln_feature_identifier_type;
typedef struct mln_feature {
  uint32_t size;
  const mln_geometry* geometry;
  const mln_json_member* properties;
  size_t property_count;
  uint32_t identifier_type;
  union {
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
  } identifier;
} mln_feature;